<resources>
    <string name="app_name">Buoi 02</string>
    <string name="text_pa1908">PA1908</string>
    <string name="text_username_title">username:</string>
    <string name="text_password_title">password:</string>
    <string name="text_login">Login</string>
    <string name="text_hint">nguyen.van.cong.cong</string>
    <string name="text_sign_up">Have not Account, Sign up now?</string>
</resources>
