<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="@dimen/dp_16">

    <TextView
        android:id="@+id/text_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/text_pa1908"
        android:textColor="@android:color/holo_red_light"
        android:textSize="@dimen/sp_40"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_app_name"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/text_username_title"
        android:textSize="@dimen/sp_32" />

    <EditText
        android:id="@+id/text_username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_username"
        android:hint="@string/text_hint"
        android:inputType="text"
        android:textSize="@dimen/sp_24" />

    <TextView
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_username_input"
        android:text="@string/text_password_title"
        android:textSize="@dimen/sp_32" />

    <EditText
        android:id="@+id/text_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_password"
        android:inputType="textPassword"
        android:textSize="@dimen/sp_24" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_password_input"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/text_login" />

    <TextView
        android:id="@+id/text_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_login"
        android:layout_marginTop="@dimen/dp_40"
        android:gravity="center"
        android:text="@string/text_sign_up"
        android:textSize="@dimen/sp_16" />
</RelativeLayout>